Fix: make "hosts" note in security contexts work in Globus adaptors